kubernetes/spring-microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-microservice
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-microservice
  template:
    metadata:
      labels:
        app: spring-microservice
    spec:
      containers:
        - name: spring-microservice
          image: [docker repository ip/name]:[docker repository port]/spring-microservice:[image version]
          resources:
            requests:
              memory: '256Mi'
              cpu: '500m'
            limits:
              memory: '512Mi'
              cpu: '1'
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /demo/status
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /demo/status
              port: http
            initialDelaySeconds: 120
      imagePullSecrets:
        - name: trccred
