kubernetes/spring-microservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-microservice
  namespace: default
  labels:
    app: spring-microservice
spec:
  selector:
    app: spring-microservice
  type: ClusterIP
  ports:
    - name: http
      port: 8080
