kubernetes/spring-microservice-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spring-microservice-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: spring-microservice
              servicePort: 8080
